--- a/week1HtmlAndCssReview.html
+++ b/week1HtmlAndCssReview.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+  <link rel="stylesheet" href="styles.css">
+  <title>Page Title</title>
 </head>
 <body>
 
